syntax = "proto3";

package protocol;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "./core_proto;core_proto";

service Protocol {
  rpc SendTransaction(SendTransactionRequest) returns (TransactionResponse) {
    option (google.api.http) = {
      post: "/core/grpc/transaction"
      body: "transaction"
    };
  }
  rpc ForwardTransaction(ForwardTransactionRequest) returns (ForwardTransactionResponse) {
    option (google.api.http) = {
      post: "/core/grpc/transaction/forward"
      body: "transaction"
    };
  }
  rpc GetTransaction(GetTransactionRequest) returns (TransactionResponse) {
    option (google.api.http) = {get: "/core/grpc/transaction/{txhash}"};
  }
  rpc GetBlock(GetBlockRequest) returns (BlockResponse) {
    option (google.api.http) = {get: "/core/grpc/block/{height}"};
  }
  rpc GetNodeInfo(GetNodeInfoRequest) returns (NodeInfoResponse) {
    option (google.api.http) = {get: "/core/grpc/node_info"};
  }
  rpc Ping(PingRequest) returns (PingResponse) {
    option (google.api.http) = {get: "/core/grpc/ping"};
  }
  rpc GetRegistrationAttestation(RegistrationAttestationRequest) returns (RegistrationAttestationResponse) {
    option (google.api.http) = {
      post: "/core/grpc/attest/registration"
      body: "registration"
    };
  }
  rpc GetDeregistrationAttestation(DeregistrationAttestationRequest) returns (DeregistrationAttestationResponse) {
    option (google.api.http) = {
      post: "/core/grpc/attest/deregistration"
      body: "deregistration"
    };
  }
  rpc GetRewardAttestation(RewardAttestationRequest) returns (RewardAttestationResponse) {
    option (google.api.http) = {get: "/core/grpc/attest/reward"};
  }
}

message SignedTransaction {
  string signature = 1;
  string request_id = 2;
  oneof transaction {
    TrackPlays plays = 1000;
    ValidatorRegistrationLegacy validator_registration = 1001;
    SlaRollup sla_rollup = 1002;
    ManageEntityLegacy manage_entity = 1003;
    ValidatorMisbehaviorDeregistration validator_deregistration = 1004;
    StorageProof storage_proof = 1005;
    StorageProofVerification storage_proof_verification = 1006;
    Attestation attestation = 1007;
  }
}

message SendTransactionRequest {
  SignedTransaction transaction = 1;
}

message ForwardTransactionRequest {
  string signature = 1;
  SignedTransaction transaction = 2;
}

message GetTransactionRequest {
  string txhash = 1;
}

message TransactionResponse {
  string txhash = 1;
  SignedTransaction transaction = 2;
  int64 block_height = 3;
  string block_hash = 4;
}

message ForwardTransactionResponse {}

message GetBlockRequest {
  int64 height = 1;
}

message BlockResponse {
  string blockhash = 1;
  string chainid = 2;
  string proposer = 3;
  int64 height = 4;
  // TODO: deprecate in favor of txs
  repeated SignedTransaction transactions = 5;
  int64 current_height = 6;
  google.protobuf.Timestamp timestamp = 7;
  repeated TransactionResponse transaction_responses = 8;
}

message GetNodeInfoRequest {}

message NodeInfoResponse {
  string chainid = 1;
  bool synced = 2;
  string comet_address = 3;
  string eth_address = 4;
  int64 current_height = 5;
}

message TrackPlays {
  repeated TrackPlay plays = 1;
}

message ValidatorRegistrationLegacy {
  string endpoint = 1;
  string comet_address = 2;
  string eth_block = 3;
  string node_type = 4;
  string sp_id = 5;
  bytes pub_key = 6;
  int64 power = 7;
}

message ValidatorRegistration {
  string delegate_wallet = 1;
  string endpoint = 2;
  string node_type = 3;
  string sp_id = 4;
  int64 eth_block = 5;
  string comet_address = 6;
  bytes pub_key = 7;
  int64 power = 8;
  int64 deadline = 9;
}

message ValidatorMisbehaviorDeregistration {
  string comet_address = 1;
  bytes pub_key = 2;
}

message ValidatorDeregistration {
  string comet_address = 1;
  bytes pub_key = 2;
  int64 deadline = 3;
}

message TrackPlay {
  string user_id = 1;
  string track_id = 2;
  google.protobuf.Timestamp timestamp = 3;
  string signature = 4;
  string city = 5;
  string region = 6;
  string country = 7;
}

message PingRequest {}

message PingResponse {
  string message = 1;
}

message SlaRollup {
  google.protobuf.Timestamp timestamp = 1;
  int64 block_start = 2;
  int64 block_end = 3;
  repeated SlaNodeReport reports = 4;
}

message SlaNodeReport {
  string address = 1;
  int32 num_blocks_proposed = 2;
}

message StorageProof {
  int64 height = 1;
  string address = 2;
  repeated string prover_addresses = 3;
  string cid = 4;
  bytes proof_signature = 5;
}

message StorageProofVerification {
  int64 height = 1;
  bytes proof = 2;
}

message ManageEntityLegacy {
  int64 user_id = 1;
  string entity_type = 2;
  int64 entity_id = 3;
  string action = 4;
  string metadata = 5;
  string signature = 6;
  string signer = 7;
  string nonce = 8;
}

message RegistrationAttestationRequest {
  ValidatorRegistration registration = 1;
}

message RegistrationAttestationResponse {
  string signature = 1;
  ValidatorRegistration registration = 2;
}

message DeregistrationAttestationRequest {
  ValidatorDeregistration deregistration = 1;
}

message DeregistrationAttestationResponse {
  string signature = 1;
  ValidatorDeregistration deregistration = 2;
}

message Attestation {
  repeated string signatures = 1;
  oneof body {
    ValidatorRegistration validator_registration = 1000;
    ValidatorDeregistration validator_deregistration = 1001;
  }
}

message RewardAttestationRequest {
  // base64 encoded json data
  string data = 1;
  // signed sha256 hash of the base64 encoded data
  string signature = 2;
}

message RewardAttestationResponse {
  // base64 encoded json data + original signature
  string data = 1;
  // signed sha256 hash of the base64 encoded data
  string signature = 2;
}
